# MidnightClub3DER-Archipelago

./: .gitignore  README.md  conftest.py  install.bat  install.py  pyproject.toml  targets.yaml
.github/workflows/: ci.yml
client/mc3ap/: __init__.py  __main__.py  runner.py
docs/: AP_PR_DRAFT.md  COMMANDS.md  COMPLETE_MEMORY_MAP.md  COMPLETE_STATUS.md  DEALER_AVAILABILITY_HUNT.md  DUMP_REFERENCE.md  FULL_DIFF_PLAN.md  INSTALL.md  PROJECT_STATUS.md  PURCHASE_FLOW_STATIC_ANALYSIS.md  REFERENCE.md  api.md  design.md  memory_map.md  pcsx2_stock_research.md  reverse_engineering_checklists.md  stats_catalog.md
mc3api/: __init__.py  __main__.py  bridge.py  dealer.py  dealer_display.py  events.py  game.py  hooks.py  memmap.py  monitor.py  purchase_hook.py  stats.py  vehicles.py
tests/: README.md
tests/e2e/: test_ap_client_ws.py
tests/emulator/: test_live_game.py
tests/integration/: test_check_mapper.py  test_runner_loop.py  test_runtime_item_apply.py
tests/unit/: test_ap_protocol.py  test_dealer_display.py  test_events.py  test_monitor.py  test_purchase_hook.py  test_stats_catalog.py
tools/: __init__.py  action_driver.py  build_payload.py  full_diff.py  hook_purchase.py  instrument_setcarcfg.py  instrument_setcarcfg_first_site.py  listen.py  live_inject.py  map_vehicle_selection.py  mc3_api.py  mips_assembler.py  mips_disasm.py  mips_scanner.py  money.py  probe_dealer_display.py  probe_memory.py  probe_vehicle_locks.py  probe_vehicle_metadata.py  pulse_dealer_lock.py  race_sampler.py  run_explore.py  static_xref.py  watch.py
worlds/mc3/: .apignore  __init__.py  (+8 more)
(+34 files in other folders)
